# libdatrie

./: CMakeLists.txt  README.rst  config.h.cmake  tox.ini
.github/workflows/: auto.yml  ci.yml  conda.yml  smoke.yml  win.yml
cmake/modules/: FindIconv.cmake  Findiconv.cmake
datrie/: libdatrie.def  trie.h
tools/: trietool.c
